# dronetrain

./: .gitignore  .gitmodules  README.md  convert_to_tflite.py  converttflite2.py  legacy_train.py  main.py  mnist_tutorial.py  model_data.cc  pyproject.toml  tflitemodels  train.py  train2.py
dtcore/: __init__.py  simple_env.py  trainer.py
models/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
models/array_metadatas/: process_0
models/ocdbt.process_0/: manifest.ocdbt
